--- a/Desktop/analytics-frontend-main/client/package.json
+++ b/Desktop/analytics-frontend-main/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "d3": "^3.5.17",
     "d3-scale-chromatic": "^3.0.0",
+    "jquery": "^3.6.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
